feat: enhance CasbinRule with JSON serialization and deserialization methods